test_regress/t/t_inside_unbounded_bad.out
%Warning-INSIDETRUE: t/t_inside_unbounded_bad.v:12:23: Unbounded on both sides of inside range [$:$] is always true
   12 |     if (value inside {[$:$]}) $display("PASS");
      |                       ^
                     ... For warning description see https://verilator.org/warn/INSIDETRUE?v=latest
                     ... Use "/* verilator lint_off INSIDETRUE */" and lint_on around source to disable this message.
%Error: Exiting due to
